--- a/SalesWebMvc1/appsettings.json
+++ b/SalesWebMvc1/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvc1Context": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvc1Context-fb436610-92f2-4603-b28a-3e6608fa631b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvc1Context": "server=localhost;userid=developer;password=5885;database=saleswebmvcappdb"
   }
 }
